# metricsifter

./: .gitignore  CLAUDE.md  LICENSE  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yaml  publish.yaml
docs/design/: 2026-07-07-persistence-gate.md
docs/superpowers/plans/: 2026-07-14-codebase-remediation.md
docs/superpowers/specs/: 2026-07-14-codebase-remediation-design.md
examples/: feature_reduction.ipynb
experiments/: README.md  requirements.txt
experiments/dataset/: loader.py  metric.py  separater.py
experiments/evaluation/: empirical_ground_truth.py  localization.py  reduction.py
experiments/internal_logger/: logger.py
experiments/localization/: pyrca.py  rcd.py
experiments/notebooks/: synthetic_reduction.ipynb
experiments/priorknowledge/: base.py  call_graph.py  sockshop.py  trainticket.py
experiments/reduction/: runner.py
experiments/reduction/algo/: base.py  birch.py  fluxinfer_ad.py  hdbs.py  kstest.py  nsigma.py
experiments/sweeper/: sweeper.py
metricsifter/: __init__.py  cli.py  evaluation.py  plot.py  sifter.py  transformer.py  types.py  utils.py
metricsifter/adapters/: __init__.py  prometheus.py
metricsifter/algo/: detection.py  segmentation.py
tests/: conftest.py  test_algorithms.py  test_autotune.py  test_cli.py  test_detection.py  test_evaluation.py  test_experiment_sources.py  test_plot.py  test_prometheus_adapter.py  test_regression.py  test_segmentation.py  test_sift_result.py  test_sifter.py  test_sifter_extended.py  test_transformer.py  test_utils.py  test_workflows.py
tests/sample_gen/: generator.py
