[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metricsifter"
version = "0.2.0"
description = "Feature Reduction for Multivariate Time Series Data"
readme = "README.md"
authors = [{name = "yuuki"}]
license = "BSD-3-Clause"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "joblib",
    "ruptures",
    "statsmodels",
]

[project.urls]
Homepage = "https://github.com/ai4sre/metricsifter"
"Bug Tracker" = "https://github.com/ai4sre/metricsifter/issues"

[project.scripts]
metricsifter = "metricsifter.cli:main"

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7",
]
dev = [
    "black",
    "ruff",
    "coverage",
    "pytest",
    "setuptools",
    "matplotlib>=3.7",
    "scikit-learn>=1.5",
]
experiments = [
    "pandas-stubs",
    "scikit-learn>=1.5",
    "hdbscan",
    "networkx",
    "threadpoolctl",
]

[tool.setuptools.packages.find]
include = ["metricsifter*"]

[tool.setuptools.package-data]
metricsifter = ["py.typed"]

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
